tests/test_input_files/good/test_good_func_9.punkt
function f <int x> -> int {
	return 2 * x.
}

function g <int x> -> int {
	return 2 * f(x).
}

function h <int x> -> int {
	return 2 * g(x).
}

main {
	println h(1).
}
