tests/test_input_files/bad/test_bad_return_stmt_6.punkt
function f <> -> int {
	if true {
		var x = 1.
	} else {
		var x = 2.
	}
}

main {
	f().
}
